# wavey_autoencoder

./: Dockerfile  HaarIntuition.ipynb  Latents.ipynb  LatentsPolymer.ipynb  README.md  TrainGene.ipynb  TrainPolymer.ipynb  Untitled.ipynb  VerifySave.ipynb  build_vae.sh  run_docker.sh  run_jupyter.sh  start_jupyter.sh
browser_models/: Cargo.toml
browser_models/src/: lib.rs  state.rs  web.rs
cvt_models/: Cargo.toml
cvt_models/src/: main.rs
cvt_models/src/model/: mod.rs
models/: add_groupnorm_wavelet.py  convert_wavelets.py  jax_vae_dense.py  jax_vae_wavelet.py  pytorch_vae_wavelet.py
polymer/: compute_tfrecord_stats.py  config.json  create_dataset.sh  dataset_stats.py  generate_dataset.py  generate_tfrecords.py  generate_whole_image_tfrecords.py  load_tfrecords.py  test_onnx.py  write_example.py
root/: gather_images.py  generate_tfrecords.py  get_boxes.py  get_crops.py  load_genetic_data.py  load_parquet.py  load_tfrecords.py
