[package]
name = "browser_models"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]

default = ["ndarray"]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]

[dependencies]

# Wasm dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
# https://github.com/rust-random/getrandom/#webassembly-support
getrandom = { version = "0.3.3", default-features = false, features = ["wasm_js"] }
burn = { version = "0.18.0", features = ["ndarray", "wgpu"] }
serde = "1.0.219"
console_error_panic_hook = "0.1.7"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
